Finalizado a conexao com o banco de dados
