# php-api/app/Http/Controllers/microsoftAuthenticatorController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 use Illuminate\Http\Request;
+use App\Models\usuariosModel;
 use OTPHP\TOTP;
 
 class microsoftAuthenticatorController extends Controller
@@ -18,13 +19,29 @@ class microsoftAuthenticatorController extends Controller
 
     public function registerUser(Request $request)
     {
-        if (!$request->has('email') || !$request->has('client_name')) {
+        if (!$request->has('email') || !$request->has('client_name') || !$request->has('senha')) {
             return response()->json([
-                'message' => 'Parâmetro "email" e "client_name" são obrigatórios',
+                'message' => 'Parâmetro "email", "client_name" e "senha" são obrigatórios',
             ], 400);
         }
 
-        setcookie("email", $request->query('email'), time() + 3600, "/");
+        $fkIdentityProvider = $request->input('fk_IdentityProvider') ?? '1';
+
+        $totp = TOTP::create();
+        $totp->setLabel($request->input('email'));
+        $totp->setIssuer('DCRM');
+
+        $secret = $totp->getSecret();
+        $uri = $totp->getProvisioningUri();
+
+        $user = usuariosModel::create([
+            'email' => $request->input('email'),
+            'nome' => $request->input('client_name'),
+            'senha' => md5($request->input('senha', 'default_password')),
+            'secret_2fa' => $secret,
+            'is_2fa_enabled' => true,
+            'fk_IdentityProvider' => $fkIdentityProvider
+        ]);
 
         return response()->json([
             'message' => 'Usuário registrado com sucesso',
@@ -40,18 +57,6 @@ class microsoftAuthenticatorController extends Controller
                 'message' => 'Usuário não registrado',
             ], 400);
         }
-
-        $totp = TOTP::create();
-        $totp->setLabel($email);
-        $totp->setIssuer('DCRM');
-
-        $secret = $totp->getSecret();
-        $uri = $totp->getProvisioningUri();
-
-        setcookie("totp_secret", $secret, time() + 3600, "/");
-        setcookie("totp_uri", $uri, time() + 3600, "/");
-        setcookie("email", "", time() - 3600, "/");
-
 
         return response()->json([
             'secret' => $secret,
