# php-api/app/Models/usuariosModel.php
@@ -1,0 +1,22 @@
+<?php 
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class usuariosModel extends Model
+{
+    use HasFactory;
+
+    protected $table = 'usuarios';
+
+    protected $fillable = [
+        'nome',
+        'email',
+        'senha',
+        'fk_IdentityProvider',
+        'secret_2fa',
+        'is_2fa_enabled',
+    ];
+}
